<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.example</groupId>
  <artifactId>explore</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>Archetype - explore</name>
  <url>http://maven.apache.org</url>

  <properties>
    <java.version>20</java.version>
    <junit.jupiter.version>5.10.0-RC1</junit.jupiter.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.10.1</version>
    </dependency>

    <dependency>
      <groupId>com.medallia.word2vec</groupId>
      <artifactId>Word2VecJava</artifactId>
      <version>0.10.3</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-core</artifactId>
      <version>9.7.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queryparser</artifactId>
      <version>9.7.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-queries</artifactId>
      <version>9.7.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.lucene</groupId>
      <artifactId>lucene-spellchecker</artifactId>
      <version>3.6.2</version>
    </dependency>

    <dependency>
      <groupId>com.googlecode.concurrent-trees</groupId>
      <artifactId>concurrent-trees</artifactId>
      <version>2.6.1</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>



    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.jupiter.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.github.jelmerk</groupId>
      <artifactId>hnswlib-core</artifactId>
      <version>1.1.0</version>
    </dependency>

    <dependency>
      <groupId>com.github.jelmerk</groupId>
      <artifactId>hnswlib-utils</artifactId>
      <version>1.1.0</version>
    </dependency>

    <dependency>
      <groupId>com.github.jelmerk</groupId>
      <artifactId>hnswlib-parent-pom</artifactId>
      <version>1.1.0</version>
      <type>pom</type>
    </dependency>

  </dependencies>

  <build>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <!-- or whatever version you use -->
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>

      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.1.2</version>
      </plugin>



    </plugins>

  </build>

</project>
